--- a/GBriceCorp/src/main/webapp/static/views/Cli_DetailCompte.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_DetailCompte.html
@@ -149,9 +149,9 @@
 		<table class="table table-hover ">
 			<thead>
 				<tr>
-					<th ng-click="ctrl.trier_par('Libelle')">Libelle</th>
-					<th ng-click="ctrl.trier_par('Date')">Date</th>
-					<th ng-click="ctrl.trier_par('Montant')">Montant</th>
+					<th ng-click="ctrl.trier_par('libelle')">Libelle</th>
+					<th ng-click="ctrl.trier_par('dateMouvement')">Date</th>
+					<th ng-click="ctrl.trier_par('montant')">Montant</th>
 				</tr>
 			</thead>
 			<tbody>
