--- a/GBriceCorp/src/main/webapp/static/views/Admin_CreaCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_CreaCons.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <!-- Formulaire de creation de conseiller -->
 
-<div class="panel panel-info ">
+<div class="panel panel-info " ng-init="ctrl.cons = '';">
 
 	<!-- Default panel contents -->
 	<div class="panel-heading">
