downloadfichier presque bon

--- a/GBriceCorp/src/main/webapp/static/views/Admin_AffectCli.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_AffectCli.html
@@ -42,9 +42,8 @@
 								<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_5" />
 								<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_5" />
 							</th>	
-							<th ng-click="dmdctrl.trier_par('Revenus'); flechetri_5 = !flechetri_5; flechetri_2 = false; flechetri_1 = false; flechetri_4 = false; flechetri_3 = false  ">Etat
-								<img class="icone_liste" src="static/imgs/flecheHaut.png" ng-hide="flechetri_5" />
-								<img class="icone_liste" src="static/imgs/flecheBas.png" ng-hide="!flechetri_5" />
+							<th>Etat
+
 							</th>						
 							<th width="20%">Attribution</th>
 							
