delete notif effectif

--- a/GBriceCorp/src/main/webapp/static/views/Cli_Notifications.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_Notifications.html
@@ -48,7 +48,7 @@
 									class="langue" 
 									src="static/imgs/delete.png"
 									ng-hide="!Notification.lu" 
-									ng-click="" /></td>
+									ng-click="ctrl.deleteNotif(Notification)" /></td>
 
 						</tr>
 					</tbody>
