Ajout Etat demande "affectee"

--- a/GBriceCorp/src/main/webapp/static/views/Admin_CreaCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_CreaCons.html
@@ -133,7 +133,7 @@
 									ng-model="ctrl.cons.identifiant" 
 									name="identifiant"
 									class="form-control input-sm" 
-									placeholder=""
+									placeholder="identifiant"
 									required />
 							<div class="has-error" ng-show="formCreaCons.identifiant.$dirty">
 								<span ng-show="formCreaCons.identifiant.$error.required">Champ obligatoire</span>
