--- a/GBriceCorp/src/main/webapp/static/views/Admin_EditCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_EditCons.html
@@ -86,7 +86,7 @@
 
 
 					<div class="form-actions floatRight">
-						<input type="submit" value="Ajouter"
+						<input type="submit" value="Modifier"
 							class="btn btn-primary btn-sm"
 							ng-disabled="formConnexion.$invalid">
 					</div>
