--- a/GBriceCorp/src/main/webapp/static/views/Cons_DemCli.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cons_DemCli.html
@@ -45,7 +45,7 @@
 								<td>{{(demande.client!=null)?demande.client.prenom:demande.prenom}}</td>
 								<td>{{demande.dateCreation}}</td>
 								<td align=center>
-<img class="icone_liste" src="static/imgs/crayon.png" ng-hide="{{(demande.etat=='Cree')?false:true}}"  />
+<img class="icone_liste" src="static/imgs/crayon.png" ng-hide="{{(demande.etat=='Affectee')?false:true}}"  />
 <img class="icone_liste" src="static/imgs/sablier.png" ng-hide="{{(demande.etat=='EnCours')?false:true}}" />
 
 								</td>
