--- a/GBriceCorp/src/main/webapp/static/views/Admin_CreaCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_CreaCons.html
@@ -77,6 +77,7 @@
 							<div class="has-error" ng-show="formCreaCons.mail.$dirty">
 								<span ng-show="formCreaCons.mail.$error.required">Champ
 									obligatoire</span>
+								<span ng-show="formCreaCons.mail.$error.email">Email non valide</span>
 							</div>
 						</div>
 					</div>
@@ -97,6 +98,9 @@
 								
 							</div>
 							<span ng-if="ctrl.cons.conf_mail != ctrl.cons.mail">Mails non identiques</span>
+							<div class="has-error" ng-show="formCreaCons.conf_mail.$dirty">
+								<span ng-show="formCreaCons.conf_mail.$error.email">Email non valide</span>
+							</div>
 						</div>
 					</div>
 				</div>
