Controle session existe

--- a/GBriceCorp/src/main/webapp/static/views/Admin_AffectCli.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_AffectCli.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 
 
-	<div class="panel panel-info " ng-controller="DemandeController as dmdctrl" ng-init="dmdctrl.getDemandesCreationClient(0); checkAffectations = false">
+	<div class="panel panel-info " ng-controller="DemandeController as dmdctrl" ng-init="dmdctrl.getDemandesCreationClient(0); checkAffectations = false; ctrl.isConnexionExist()">
 
 		<!-- Default panel contents -->
 		<div class="panel-heading" >
