--- a/GBriceCorp/src/main/webapp/static/views/Admin_EditCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_EditCons.html
@@ -1,6 +1,6 @@
 <!-- Formulaire d'edition d'un conseiller -->
 <meta charset="utf-8">
-<div class="panel panel-info"  ng-init="ctrl.getConsById()" >
+<div class="panel panel-info"  ng-init="ctrl.getConsById(); ctrl.isConnexionExist()" >
 
 	<!-- Default panel contents -->
 	<div class="panel-heading">
