--- a/GBriceCorp/src/main/webapp/static/views/Admin_RechCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_RechCons.html
@@ -1,6 +1,6 @@
 
 <!-- Tableau d'affichage des conseillers -->
-<div class="panel panel-info"  ng-init="ctrl.getListeCons()">
+<div class="panel panel-info"  ng-init="ctrl.getListeCons(); ctrl.isConnexionExist()">
 
 		<!-- Default panel contents -->
 		<div class="panel-heading">
