--- a/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
@@ -1,5 +1,5 @@
 
-	<div class="panel panel-info" ng_controller="CompteController as cptctrl" ng-init="cptctrl.findComptesByClientId()">
+	<div class="panel panel-info" ng_controller="CompteController as cptctrl" ng-init="cptctrl.findComptesByClientId(); ctrl.isConnexionExist()">
 
 			<!-- Default panel contents -->
 			<div class="panel-heading" >
