--- a/GBriceCorp/src/main/webapp/static/views/Cli_ModifInfos.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_ModifInfos.html
@@ -4,7 +4,7 @@
 
 <meta charset="UTF-8" />
 
-<div class="panel panel-info" ng-controller="DemandeController as dmdctrl">
+<div class="panel panel-info" ng-controller="DemandeController as dmdctrl" ng-init=" ctrl.isConnexionExist()">
 
 	<!-- Default panel contents -->
 	<div class="panel-heading">
