--- a/GBriceCorp/src/main/webapp/static/views/Cli_Notifications.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_Notifications.html
@@ -7,7 +7,7 @@
 		ctrl.getNotifs()
 		 -->
 
-	<div class="panel panel-info" ng-init="ctrl.getNotifs();">
+	<div class="panel panel-info" ng-init="ctrl.getNotifs(); ctrl.isConnexionExist()">
 
 		<!-- Default panel contents -->
 		<div class="panel-heading">
