--- a/GBriceCorp/src/main/webapp/static/views/Cli_NouvCompte.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_NouvCompte.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <div class="panel panel-info"
-	ng-controller="DemandeController as dmdCtrl">
+	ng-controller="DemandeController as dmdCtrl" ng-init="ctrl.isConnexionExist()">
 	<div class="panel-heading">
 		<span class="lead">Demande de création d'un nouveau compte</span>
 	</div>
