--- a/GBriceCorp/src/main/webapp/static/views/Cons_DetailCompte.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cons_DetailCompte.html
@@ -1,6 +1,6 @@
 
 <div class=" panel panel-default "
-	ng-init="ctrl.getClient(client_id)">
+	ng-init="ctrl.getClient(client_id); ctrl.isConnexionExist()">
 
 	<div class="panel-heading ">
 
