--- a/GBriceCorp/src/main/webapp/static/views/Cons_RechCli.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cons_RechCli.html
@@ -1,7 +1,7 @@
 
 <!-- Tableau d'affichage des clients -->
 
-	<div class="panel panel-info" >
+	<div class="panel panel-info" ng-init="ctrl.isConnexionExist()">
 
 		<!-- Default panel contents -->
 		<div class="panel-heading" >
