--- a/GBriceCorp/src/main/webapp/static/views/Cli_DetailCompte.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_DetailCompte.html
@@ -170,7 +170,7 @@
 		
 			</tbody>
 		</table>
-				<span class="lead">Solde ce jour {{compte.solde}}euros</span>		
+<!-- 				<span class="lead">Solde ce jour {{currentUser.compte.solde}} euros</span>		 -->
 				<button ng-click="ctrl.printToCart('ReleveSectionId')"
 				class="btn btn-warning btn-sm floatRight no-print">Imprimer
 				le Releve</button>
