--- a/GBriceCorp/src/main/webapp/static/views/Fin_Inscription.html
+++ b/GBriceCorp/src/main/webapp/static/views/Fin_Inscription.html
@@ -1,7 +1,8 @@
 
 
 <div class="panel panel-info"
-	ng-controller="DemandeController as dmdctrl" ng-init="dmdctrl.findDemandeById(demande_id)">
+	ng-controller="DemandeController as dmdctrl"
+	ng-init="dmdctrl.findDemandeById(demande_id); 	">
 
 	<!-- Default panel contents -->
 	<div class="panel-heading">
@@ -22,6 +23,8 @@
 							class="form-control input-sm"
 							onchange="angular.element(this).scope().uploadFile(this.files, 'Domicile')" />
 					</div>
+
+					
 				</div>
 			</div>
 		</div>
@@ -38,7 +41,7 @@
 		</div>
 
 
-	</div>{{tropVolumineux}}
+	</div>
 	<div class="panel-body" ng-hide="Impot">
 		<div class="col-xs-12 raw ">
 			<div class="row">
@@ -49,12 +52,12 @@
 						<input type="file" id="file" name="file"
 							class="form-control input-sm"
 							onchange="angular.element(this).scope().uploadFile(this.files, 'Impot')" />
-					</div>{{tropVolumineux}}
-						<div class="row" ng-if="tropVolumineux ">
-							<div class="form-group col-md-12">						
-								<h1 >Votre fichier fait plus de 5Mo</h1>
-							</div>
-						</div>	
+					</div>
+<!-- 					<div class="row"  ng-hide="tropVolumineux == true"> -->
+<!-- 						<div class="form-group col-md-12"> -->
+<!-- 							<h1>Votre fichier fait plus de 5Mo</h1> -->
+<!-- 						</div> -->
+<!-- 					</div> -->
 
 
 				</div>
@@ -75,6 +78,5 @@
 
 
 	</div>
-		<a href="#/" class="col-xs-12 btn btn-warning btn-lg "> Retour
-						</a>
+	<a href="#/" class="col-xs-12 btn btn-warning btn-lg "> Retour </a>
 </div>
